report.css
body {
    color: #111111;
    padding: 3em;
    font-family: sans-serif;
}

h1, h2 {
    margin-top: 0;
}

a:link, a:active, a:visited, a:hover {
    color: #000000;
    text-decoration: none;
    border-bottom: dotted 1px;
}

cite {
    font-style: normal;
}

q {
    font-style: italic;
}

.highlight {
    background-color: #FFF0BF;
}

.Exchange, .Request, .Response {
    clear: right;
}

.Request, .Response {
    margin-bottom: 2em;
}

.request-line, .status-line, .HeaderEntry {
    font-family: monospace;
    padding: 0.3em 0;
}

.HeaderEntry {
    white-space: pre-wrap;
    overflow: auto;
}

.request-line, .status-line {
    font-weight: bold;
}

.review-block {
    margin-top: 2em;
}

.hint {
    margin: 0 0 1em 0;
    color: #444444;
    display: inline-block;
    padding: 0.3em;
    border: dashed 1px #444444;
}

.payload-body {
    font-family: monospace;
    white-space: pre-wrap;
    max-height: 20em;
    overflow: auto;
}

.review {
    float: left;
    width: 57%;
    padding-right: 1em;
}

.notices {
    float: right;
    width: 40%;
    border-left: solid 1px #DDDDDD;
    padding-left: 1em;
}

.notice-info {
    color: #BBBBBB;
}

.notice-error .notice-severity {
    color: #FF0000;
}

.toggle-notice {
    display: inline-block;
    float: right;
    margin-left: 1em;
    cursor: pointer;
    color: #BBBBBB;
    border-bottom: dotted 1px;
}

br.clear {
    clear: both;
}

